--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title> IS 13/14 Results </title>
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+		<script  src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 	</head>
 
 	<body>
-		<div id="root"></div>
+		<div class="container" id="root"></div>
 	</body>
 </html>
